--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="jap_o">Japanese O</string>
     <string name="empty_box">Empty Box</string>
     <string name="check_button">Check Box</string>
+    <string name="try_again_button">Try Again</string>
 </resources>
