--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="jap_e">Japanese E</string>
     <string name="jap_o">Japanese O</string>
     <string name="empty_box">Empty Box</string>
+    <string name="hiragana_vowels">Hiragana Vowels</string>
+    <string name="status_bar">StatusBar</string>
     <string name="check_button">Check Box</string>
     <string name="try_again_button">Try Again</string>
     <string name="back_arrow_button">Back Arrow</string>
